# KIV-Operacni_system

./: CMakeLists.txt  README.md
compiled/: boot.ilk  kernel.exp  kernel.ilk  kernel.lib  lnk{4D160BD1-EE9C-484D-8760-E8166570560F}.tmp  lnk{5092B292-F54E-432D-BAA4-133A6F13D45D}.tmp  test.txt  user.exp  user.ilk  user.iobj  user.ipdb  user.lib
msvc/boot/: boot.sln
msvc/boot/x64/Debug/: vc141.idb
msvc/boot/x64/Debug/boot.tlog/: CL.command.1.tlog  CL.write.1.tlog  boot.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
msvc/boot/x64/Release/boot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  boot.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
msvc/kernel/x64/Debug/: vc141.idb
msvc/kernel/x64/Debug/kernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  kernel.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
msvc/kernel/x64/Release/kernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  kernel.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
msvc/user/: user.sln  user.vcxproj  user.vcxproj.filters
msvc/user/x64/Debug/: vc141.idb
msvc/user/x64/Debug/user.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  user.write.1u.tlog
src/kernel/: io.cpp  kernel.cpp
src/user/: echo.cpp  echo.h  freq.cpp  freq.h  md.cpp  md.h  ps.cpp  ps.h  rd.cpp  rgen.cpp  rgen.h  rtl.cpp  rtl.h  shell.cpp  shell.h  shutdown.cpp  shutdown.h  sort.cpp  sort.h  type.cpp  type.h  wc.cpp  wc.h
(+8 files in other folders)
